# SciCheck

./: .gitmodules  build_kg.py  build_knowledge_graph.py  build_knowledge_graph_from_dataset.py  knowledge-graph.ipynb  pyproject.toml  settings.py  utils.py  worker_thread.py
