[project]
name = "scicheck"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.*"
dependencies = [
    "certifi~=2026.2",
    "charset-normalizer~=3.4",
    "click~=8.3",
    "colorama~=0.4",
    "decorator~=5.2",
    "filelock~=3.25",
    "fsspec~=2026.3",
    "huggingface-hub~=1.9",
    "idna~=3.11",
    "ipykernel>=7.2.0",
    "jinja2~=3.1",
    "joblib~=1.5",
    "markupsafe~=3.0",
    "matplotlib>=3.10.8",
    "mpmath~=1.3",
    "networkx~=3.6",
    "nltk~=3.9",
    "numpy~=2.4",
    "packaging~=26.0",
    "pillow~=12.2",
    "pyparsing~=3.3",
    "pyyaml~=6.0",
    "regex~=2026.4",
    "requests~=2.33",
    "sacremoses~=0.1",
    "scikit-learn~=1.8",
    "scipy~=1.17",
    "sentence-transformers~=5.3",
    "sentencepiece~=0.2",
    "six~=1.17",
    "sympy~=1.14",
    "threadpoolctl~=3.6",
    "tokenizers~=0.22",
    "torch==2.11.0",
    "torchvision==0.26.0",
    "tqdm~=4.67",
    "transformers~=5.5",
    "typing-extensions~=4.15",
    "urllib3~=2.6",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true
